--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.rahul.helloworld.MainActivity">
+tools:context="com.example.rahul.goodbyeworld.MainActivity">
 
 <android.support.v7.widget.Toolbar
     android:id="@+id/my_toolbar"
