--- a/app/src/main/res/layout/fragment_item_three.xml
+++ b/app/src/main/res/layout/fragment_item_three.xml
@@ -2,7 +2,7 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.example.rahul.helloworld.ItemThreeFragment">
+tools:context="com.example.rahul.goodbyeworld.ItemThreeFragment">
 
 <ImageView
     android:id="@+id/truiton_image"
