--- a/app/src/main/res/menu/bottom_navigation_items.xml
+++ b/app/src/main/res/menu/bottom_navigation_items.xml
@@ -12,4 +12,8 @@
         android:id="@+id/action_item3"
         android:icon="@drawable/ic_action_refresh"
         android:title="@string/item_3"/>
+    <item
+        android:id="@+id/action_item4"
+        android:icon="@drawable/ic_action_refresh"
+        android:title="Item 4"/>
 </menu>
